kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: taxiusers-backend
    labels:
        app: taxiusers-backend
    namespace: example
spec:
    replicas: 1
    selector:
        matchLabels:
            app: taxiusers-backend
    template:
        metadata:
            labels:
                app: taxiusers-backend
        spec:
            containers:
                - name: taxiusers-backend-service
                  image: taxiusers_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                - name: taxiusers-backend-db
                  image: taxiusers_backend_db:latest
                  imagePullPolicy: Never
