kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: taxiusers-backend-ingress
    namespace: example
spec:
    rules:
        - host: taxiusers.example.local
          http:
            paths:
              - backend:
                  serviceName: taxiusers-service
                  servicePort: 80
                path: /
